Separate model Book to Book and BookEdition; Make datamigration; Add pages for book editions.

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -22,6 +22,7 @@
               <li><a href="{% url 'index' %}">Home</a></li>
               <li><a href="{% url 'author' %}">Authors</a></li>
               <li><a href="{% url 'book' %}">Books</a></li>
+              <li><a href="{% url 'book_edition' %}">Book editions</a></li>
               <li><a href="{% url 'year' %}">Years</a></li>
               <li><a href="{% url 'publisher' %}">Publishers</a></li>
               <li><a href="{% url 'book_series' %}">Book series</a></li>
