--- a/templates/book/book_delete.html
+++ b/templates/book/book_delete.html
@@ -3,7 +3,7 @@
 {% load django_bootstrap5 %}
 
 {% block title %}Delete book {{ object.title }}{% endblock %}
-{% block content_title %}Delete Book {{ object.title }}{% endblock %}
+{% block content_title %}Delete book {{ object.title }}{% endblock %}
 
 
 {% block actions %}{% endblock %}
