--- a/templates/book/book_detail.html
+++ b/templates/book/book_detail.html
@@ -7,11 +7,6 @@
 {% block actions %}
 <div class="container my-2 py-2 border justify-content-end">
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-    <form action="{% url 'reading_log_new' %}" method="GET">
-      {% csrf_token %}
-      <input type="hidden" name="book" value="{{ object.pk }}">
-      <button type="submit" class="btn btn-secondary btn-sm">Add reading log</button>
-    </form>
     <form action="{% url 'book_update' pk=object.pk %}" method="GET">{% csrf_token %}<button type="submit" class="btn btn-secondary btn-sm">Update book</button></form>
     <form action="{% url 'book_delete' pk=object.pk %}" method="GET">{% csrf_token %}<button type="submit" class="btn btn-danger btn-sm">Delete book</button></form>
   </div>
@@ -22,8 +17,8 @@
 <div class="col-6">
   <ul>
     <li>Title: {{ object.title }}</li>
-    {% if object.title_extra %}
-      <li> Title extra: {{ object.title_extra }}</li>
+    {% if object.extended_title %}
+      <li> Title extra: {{ object.extended_title }}</li>
     {% endif %}
     {% if object.title_original %}
       <li> Title original: {{ object.title_original }}</li>
@@ -38,6 +33,12 @@
   <ul>
     {% for author in object.authors.all %}
     <li><a href="{% url 'author_detail' pk=author.pk %}">{{ author.full_name_short }}</a> </li>
+    {% endfor %}
+  </ul>
+  <span>Editions:</span>
+  <ul>
+    {% for book_edition in object.editions.all %}
+    <li><a href="{% url 'book_edition_detail' pk=book_edition.pk %}">{{ book_edition.title }}</a> </li>
     {% endfor %}
   </ul>
 </div>
