Update templates for better book edition readability; Fix bugs.

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -37,4 +37,19 @@
     </div>
   </div>
 </body>
+<style>
+.select2-selection--single {
+    /* Existing options: */
+    background-color: #fff;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    /* HACK: new option to make padding right: */
+    padding-bottom: 30px;
+}
+
+/* HACK: make default django-autocomplete-light arrow go away (so bootstrap shows): */
+.select2-selection__arrow {
+    visibility: hidden;
+}
+</style>
 </html>
