--- a/templates/book_edition/book_edition_delete.html
+++ b/templates/book_edition/book_edition_delete.html
@@ -2,8 +2,8 @@
 
 {% load django_bootstrap5 %}
 
-{% block title %}Delete book edition {{ object.title }}{% endblock %}
-{% block content_title %}Delete book edition {{ object.title }}{% endblock %}
+{% block title %}Delete book edition {{ object }}{% endblock %}
+{% block content_title %}Delete book edition {{ object }}{% endblock %}
 
 
 {% block actions %}{% endblock %}
