--- a/templates/book_edition/book_edition_detail.html
+++ b/templates/book_edition/book_edition_detail.html
@@ -1,7 +1,7 @@
 {% extends "book_edition/book_edition_new.html" %}
 
-{% block title %}Book edition {{ object.title }}{% endblock %}
-{% block content_title %}Book edition {{ object.title }}{% endblock %}
+{% block title %}Book edition {{ object }}{% endblock %}
+{% block content_title %}Book edition {{ object }}{% endblock %}
 
 
 {% block actions %}
