Add ReadingLog list view: new templates, view, and URL. Improve period display in ReadingLog model.

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -20,6 +20,7 @@
           <div class="nav-blocks">
             <ul class="menu">
               <li><a href="{% url 'index' %}">Home</a></li>
+              <li><a href="{% url 'reading_log_list' %}">Reading log</a></li>
               <li><a href="{% url 'author' %}">Authors</a></li>
               <li><a href="{% url 'book' %}">Books</a></li>
               <li><a href="{% url 'book_edition' %}">Book editions</a></li>
