--- a/src/templates/reading_log/reading_log_list.html
+++ b/src/templates/reading_log/reading_log_list.html
@@ -1,5 +1,7 @@
 {% extends "base_layout.html" %}
 
+{% load django_bootstrap5 %}
+
 {% block title %}Reading log{% endblock %}
 
 {% block content_title %}Reading log{% endblock %}
@@ -14,6 +16,59 @@
 
 {% block content %}
 <div class="container my-2 py-2 border">
+  <!-- Filter Form -->
+  <form method="get" class="mb-4">
+    <div class="row g-3 align-items-end">
+      <div class="col-md-2">
+        {{ filter.form.year_from.label_tag }}
+        {{ filter.form.year_from }}
+      </div>
+      <div class="col-md-2">
+        {{ filter.form.year_to.label_tag }}
+        {{ filter.form.year_to }}
+      </div>
+      <div class="col-md-2">
+        {{ filter.form.month_from.label_tag }}
+        {{ filter.form.month_from }}
+      </div>
+      <div class="col-md-2">
+        {{ filter.form.month_to.label_tag }}
+        {{ filter.form.month_to }}
+      </div>
+      <div class="col-md-4">
+        <button type="submit" class="btn btn-primary w-100">Фильтровать</button>
+      </div>
+    </div>
+    <div class="row g-3 mt-2">
+      <div class="col-md-3">
+        {{ filter.form.book_title.label_tag }}
+        {{ filter.form.book_title }}
+      </div>
+      <div class="col-md-3">
+        {{ filter.form.author_name.label_tag }}
+        {{ filter.form.author_name }}
+      </div>
+      <div class="col-md-2">
+        {{ filter.form.publisher_name.label_tag }}
+        {{ filter.form.publisher_name }}
+      </div>
+      <div class="col-md-2">
+        {{ filter.form.publication_year.label_tag }}
+        {{ filter.form.publication_year }}
+      </div>
+      <div class="col-md-2">
+        {{ filter.form.book_series_name.label_tag }}
+        {{ filter.form.book_series_name }}
+      </div>
+    </div>
+    <div class="row g-3 mt-2">
+      <div class="col-md-12">
+        <a href="{% url 'reading_log_list' %}" class="btn btn-secondary">Сбросить фильтры</a>
+      </div>
+    </div>
+  </form>
+
+  <!-- Pagination and Results Count -->
   <form method="get" class="mb-2 d-flex w-100 align-items-center">
     <div class="flex-grow-1">
       <label for="page_size" class="me-2">Показывать по:</label>
@@ -50,22 +105,29 @@
     </div>
     {% endif %}
   </form>
+  
+  <!-- Results -->
   <div class="row justify-content-left">
     <div class="col-12">
-      <ul>
-        {% for reading_log in page_obj %}
-        <li>
-          {{ reading_log }},
-          <a href="{{ reading_log.book_edition.get_absolute_url }}">{{ reading_log.book_edition.title }}</a> /
-          {% for author in reading_log.book_edition.authors.all %}{% if forloop.counter > 1 %}, {% endif %}<a href="{% url 'author_detail' pk=author.pk %}">{{ author.full_name_short }}</a>{% endfor %}
-          {% if reading_log.book_edition.publisher %} - <a href="{% url 'publisher_detail' pk=reading_log.book_edition.publisher.pk %}">{{ reading_log.book_edition.publisher }}</a>{% endif %}
-          {% if reading_log.book_edition.publication_year %} - {{ reading_log.book_edition.publication_year }}{% endif %}
-          {% if reading_log.book_edition.series %} - (<a href="{% url 'book_series_detail' pk=reading_log.book_edition.series.pk %}">"{{ reading_log.book_edition.series.name }}"</a>){% endif %}
-        </li>
-        {% endfor %}
-      </ul>
+      {% if filter.qs %}
+        <ul>
+          {% for reading_log in page_obj %}
+          <li>
+            {{ reading_log }},
+            <a href="{{ reading_log.book_edition.get_absolute_url }}">{{ reading_log.book_edition.title }}</a> /
+            {% for author in reading_log.book_edition.authors.all %}{% if forloop.counter > 1 %}, {% endif %}<a href="{% url 'author_detail' pk=author.pk %}">{{ author.full_name_short }}</a>{% endfor %}
+            {% if reading_log.book_edition.publisher %} - <a href="{% url 'publisher_detail' pk=reading_log.book_edition.publisher.pk %}">{{ reading_log.book_edition.publisher }}</a>{% endif %}
+            {% if reading_log.book_edition.publication_year %} - {{ reading_log.book_edition.publication_year }}{% endif %}
+            {% if reading_log.book_edition.series %} - (<a href="{% url 'book_series_detail' pk=reading_log.book_edition.series.pk %}">"{{ reading_log.book_edition.series.name }}"</a>){% endif %}
+          </li>
+          {% endfor %}
+        </ul>
+      {% else %}
+        <p>Записи в журнале чтения не найдены.</p>
+      {% endif %}
     </div>
   </div>
+  
   {% if is_paginated %}
   <nav class="d-flex justify-content-end">
     <ul class="pagination pagination-sm mb-0">
