--- a/src/templates/base_layout.html
+++ b/src/templates/base_layout.html
@@ -33,6 +33,7 @@
       </div>
       <div class="col-md-10 border">
         {% block actions %}{% endblock %}
+        {% block filters %}{% endblock %}
         {% block content %}{% endblock %}
       </div>
     </div>
