--- a/src/templates/book_edition/book_edition_list.html
+++ b/src/templates/book_edition/book_edition_list.html
@@ -15,40 +15,47 @@
 </div>
 {% endblock %}
 
-{% block content %}
-<div class="container my-2 py-2 border">
-  <!-- Filter Form -->
+{% block filters %}
+<div class="container my-2 py-2 border justify-content-end">
   <form method="get" class="mb-4">
     <div class="row g-3 align-items-end">
-      <div class="col-md-2">
+      <div class="col-md-4">
         {{ filter.form.book_title.label_tag }}
         {{ filter.form.book_title }}
       </div>
-      <div class="col-md-2">
+      <div class="col-md-4">
         {{ filter.form.author_name.label_tag }}
         {{ filter.form.author_name }}
       </div>
-      <div class="col-md-2">
+      <div class="col-md-4">
         {{ filter.form.publisher_name.label_tag }}
         {{ filter.form.publisher_name }}
       </div>
-      <div class="col-md-2">
+    </div>
+    <div class="row g-3 mt-2 align-items-end">
+        <div class="col-md-4">
         {{ filter.form.publication_year.label_tag }}
         {{ filter.form.publication_year }}
       </div>
-      <div class="col-md-2">
+      <div class="col-md-4">
         {{ filter.form.book_series_name.label_tag }}
         {{ filter.form.book_series_name }}
       </div>
-      <div class="col-md-1">
+    </div>
+    <div class="row g-3 mt-2">
+      <div class="col-md-4">
         <button type="submit" class="btn btn-primary w-100">Фильтровать</button>
       </div>
-      <div class="col-md-1">
-        <a href="{% url 'book_edition' %}" class="btn btn-secondary w-100">Сбросить</a>
+      <div class="col-md-4">
+        <a href="{% url 'book_edition' %}" class="btn btn-secondary w-100">Сбросить фильтры</a>
       </div>
     </div>
   </form>
+</div>
+{% endblock %}
 
+{% block content %}
+<div class="container my-2 py-2 border">
   <!-- Pagination and Results Count -->
   <form method="get" class="mb-2 d-flex w-100 align-items-center">
     <div class="flex-grow-1">
