--- a/src/templates/base_layout.html
+++ b/src/templates/base_layout.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <!-- jQuery (required for django-autocomplete-light and select2) -->
-{#  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>#}
-  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <div class="container-fluid py-4">
     <div class="row border py-2">
       <h3>{% block content_title %}{% endblock %}</h3>
